--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,30 @@ script:
 # of course we could use pandoc for this also, but pdflatex generates nicer PDFs
   - pdflatex -interaction=nonstopmode master.tex
   - pdflatex -interaction=nonstopmode README.tex
+  - pdflatex -interaction=nonstopmode lab01/lab01.tex
+  - pdflatex -interaction=nonstopmode lab01/notes01.tex
+  - pdflatex -interaction=nonstopmode lab02/lab02.tex
+  - pdflatex -interaction=nonstopmode lab02/notes02.tex
+  - pdflatex -interaction=nonstopmode lab03/lab03.tex
+  - pdflatex -interaction=nonstopmode lab03/notes03.tex
+  - pdflatex -interaction=nonstopmode lab04/lab04.tex
+  - pdflatex -interaction=nonstopmode lab04/notes04.tex
+  - pdflatex -interaction=nonstopmode lab05/lab05.tex
+  - pdflatex -interaction=nonstopmode lab05/notes05.tex
+  - pdflatex -interaction=nonstopmode lab06/lab06.tex
+  - pdflatex -interaction=nonstopmode lab06/notes06.tex
+  - pdflatex -interaction=nonstopmode lab07/lab07.tex
+  - pdflatex -interaction=nonstopmode lab07/notes07.tex
+  - pdflatex -interaction=nonstopmode lab08/lab08.tex
+  - pdflatex -interaction=nonstopmode lab08/notes08.tex
+  - pdflatex -interaction=nonstopmode lab09/lab09.tex
+  - pdflatex -interaction=nonstopmode lab09/notes09.tex
+  - pdflatex -interaction=nonstopmode lab10/lab10.tex
+  - pdflatex -interaction=nonstopmode lab10/notes10.tex
+  - pdflatex -interaction=nonstopmode lab11/lab11.tex
+  - pdflatex -interaction=nonstopmode lab11/notes11.tex
+  - pdflatex -interaction=nonstopmode lab12/lab12.tex
+  - pdflatex -interaction=nonstopmode lab12/notes12.tex
 
 # now we convert the pdf file to a much smaller djvu document  
   - pdf2djvu -d 1200 -o master.djvu master.pdf
