--- a/.gitignore
+++ b/.gitignore
@@ -10,14 +10,15 @@
 *.fot
 *.cb
 *.cb2
+*.sta
 
 ## Intermediate documents:
 *.dvi
 *-converted-to.*
 # these rules might exclude image files for figures etc.
-# *.ps
-# *.eps
-# *.pdf
+*.ps
+*.eps
+*.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
