--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: required
 
 before_install:
  - sudo apt-get install -y pandoc rubber
- - sudo apt-get install -y texlive-fonts-recommended
+ - sudo apt-get install -y texlive-fonts-recommended texlive-fonts-extra
  - sudo apt-get install -y texlive-latex-recommended texlive-latex-extra
  - sudo apt-get install -y texlive-science texlive-pictures
  - sudo apt-get install -y texlive-xetex
