Trying to debug travis-ci problems with lecture12 presentation, changed from rubber to pdflatex to get more information.

--- a/.travis.yml
+++ b/.travis.yml
@@ -75,8 +75,8 @@ script:
 
 - rubber --pdf lab12/lab12.tex
 - rubber --pdf lab12/notes12.tex
-- rubber --pdf lecture12/lecture12_handouts.tex
-- rubber --pdf lecture12/lecture12_presentation.tex
+- pdflatex lecture12/lecture12_handouts.tex
+- pdflatex lecture12/lecture12_presentation.tex
 
 - rubber --pdf electronics_labs.tex
 - rubber --pdf electronics_handouts.tex
